--- a/index.css
+++ b/index.css
@@ -3,4 +3,6 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
+    background-color: rgb(20,20,20);
+    color: rgb(240,240,240);
 }
