--- a/index.css
+++ b/index.css
@@ -3,6 +3,18 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
+
+    /* dark mode :) */
     background-color: rgb(20,20,20);
     color: rgb(240,240,240);
+}
+
+/* unvisited link */
+a:link {
+  color: rgb(0,255,150);
+}
+
+/* visited link */
+a:visited {
+  color: rgb(0,204,119);
 }
