--- a/index.css
+++ b/index.css
@@ -29,10 +29,10 @@ body {
 
 /* unvisited link */
 a:link {
-    color: rgb(0,255,150);
+    color: rgb(179, 166, 216);
 }
 
 /* visited link */
 a:visited {
-    color: rgb(0,204,119);
+    color: rgb(117, 94, 186);
 }
