Minor css update

--- a/index.css
+++ b/index.css
@@ -3,6 +3,10 @@
     src: url(./FiraMono-Regular.woff2);
 }
 
+img {
+    border: 1px solid #aaaaaa;
+}
+
 body {
     font-family: 'FiraMono', monospace;
     font-size: 90%;
