--- a/index.css
+++ b/index.css
@@ -37,8 +37,31 @@ body {
     left: 0;
     width: 100%;
     text-align: center;
-
     background-color: rgb(50,50,50);
+}
+
+.container {
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+@media (max-width: 750px) { 
+    .container {
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+
+@media (min-width: 750px) { 
+    .container {
+        margin-left: 30%;
+        margin-right: 30%;
+    }
 }
 
 a {
