--- a/index.css
+++ b/index.css
@@ -50,14 +50,21 @@ body {
     align-content: center;
 }
 
-@media (max-width: 750px) { 
+@media (max-width: 750px) {
     .container {
         margin-left: 0%;
         margin-right: 0%;
     }
 }
 
-@media (min-width: 750px) { 
+@media (max-width: 1000px) {
+    .container {
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+}
+
+@media (min-width: 1000px) {
     .container {
         margin-left: 30%;
         margin-right: 30%;
