--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ body {
     }
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 750px and max-width: 1000px) {
     .container {
         margin-left: 15%;
         margin-right: 15%;
